[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/smaller_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://ui/mail/Mailbox.gd" type="Script" id=3]
[ext_resource path="res://ui/cursor.wav" type="AudioStream" id=4]
[ext_resource path="res://ui/mail/Letter.gd" type="Script" id=5]
[ext_resource path="res://ui/mail/close.ogg" type="AudioStream" id=6]
[ext_resource path="res://ui/mail/open.ogg" type="AudioStream" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.956863, 0.8, 0.631373, 1 )
border_width_left = 2
border_width_top = 12
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.368627, 0.211765, 0.262745, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.811765, 0.776471, 0.721569, 1 )
border_width_left = 1
border_width_top = 2
border_color = Color( 0.87451, 0.964706, 0.960784, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[node name="Mailbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -199.709
margin_right = -199.709
rect_min_size = Vector2( 120, 144 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inbox" type="Panel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -70.0
margin_right = 98.0
margin_bottom = 70.0
rect_min_size = Vector2( 108, 140 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Inbox"]
margin_left = 3.0
margin_top = 3.0
margin_right = 26.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.87451, 0.964706, 0.960784, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Inbox"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="Inbox"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Inbox/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 14
custom_constants/margin_left = 3
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Inbox/Container/MarginContainer"]
margin_left = 3.0
margin_top = 14.0
margin_right = 104.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="ItemList" type="ItemList" parent="Inbox/Container/MarginContainer/ScrollContainer"]
margin_right = 101.0
margin_bottom = 122.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
same_column_width = true

[node name="Letter" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 94.8491
margin_right = 75.0
margin_bottom = 184.849
rect_min_size = Vector2( 150, 90 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Letter"]
modulate = Color( 0.223529, 0.192157, 0.294118, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Letter"]
margin_left = 1.0
margin_top = 2.0
margin_right = 150.0
margin_bottom = 90.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
custom_colors/default_color = Color( 0.352941, 0.32549, 0.32549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
bbcode_enabled = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
pause_mode = 2

[node name="Cursor" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="OpenLetter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="CloseLetter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="item_activated" from="Inbox/Container/MarginContainer/ScrollContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="item_selected" from="Inbox/Container/MarginContainer/ScrollContainer/ItemList" to="." method="_on_ItemList_item_selected"]
